Rapid Prd/src/objects/Five9Task2LeadMappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Five9 Dispositions to Lead Statuses for use in Five9Task2Lead.trigger are persisted here.</description>
    <fields>
        <fullName>Five9Disposition__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Represents a disposition as configured in Five9 and stored in the CallDisposition field on the activity task object.</description>
        <label>Five9Disposition</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadStatus__c</fullName>
        <description>Represents a Lead.status as mapped from a Five9 Call disposition</description>
        <label>LeadStatus</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotInterestedReason__c</fullName>
        <label>Not Interested Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnqualifiedReason__c</fullName>
        <label>Unqualified Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Five9 Call Activity to Lead Mappings</label>
</CustomObject>